@@ -4,6 +4,15 @@ Pre-release
           qpp::qRAM() - Quantumly-accessible Random Access Memory over classical
                         data (qRAM) ["operations.h"]
     - Added the new type qpp::qram for representing qRAM data ["types.h"]
+    - Thanks to @DevelopDaily https://github.com/softwareQinc/qpp/issues/72,
+      implemented qpp::QCircuit::
+          compress()     - Removes unused qudits from quantum circuit
+                           description
+          get_clean()    - List of clean qudits
+          is_clean()     - True if the qudit is clean (not used), false
+                           otherwise
+          remove_clean() - Remove single/list of clean qudits from quantum
+                           circuit description
 
 Version 2.1 - 14 March 2020 (3.14.2020 Pi day release)
     - Migrated the repository to https://github.com/softwareqinc/qpp
